--- a/css/app.css
+++ b/css/app.css
@@ -356,39 +356,28 @@ a {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  grid-gap: 30px;
+  grid-template-columns: 100%;
+  grid-template-rows: auto;
+  grid-template-areas: "header" "nav" "main";
 }
 
 .header {
-  display: grid;
-  grid-template-columns: 2fr repeat(3, minmax(100px, 150px));
-  grid-gap: 30px;
-  justify-content: center;
+  grid-area: header;
 }
 
-.main-nav {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 150px;
-  grid-gap: 30px;
+.nav {
+  grid-area: nav;
 }
 
-.bell-notifications {
-  padding: 30px;
+.main {
+  grid-area: main;
 }
 
-.social-stats {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
-  grid-auto-rows: 1fr;
-  grid-auto-flow: column;
-  grid-gap: 40px;
-}
-
-.social-container {
-  display: flex;
+@media (min-width: 768px) {
+  .grid-container {
+    grid-template-columns: 55px 1fr;
+    grid-template-areas: "header header" "nav main";
+  }
 }
 
 /*# sourceMappingURL=app.css.map */
