--- a/scss/3-layout/_3-mainContent.scss
+++ b/scss/3-layout/_3-mainContent.scss
@@ -4,42 +4,68 @@
 
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  grid-gap: 30px; // short hand
+  grid-template-columns:100%;
+  grid-template-rows: auto;
+  grid-template-areas:
+          'header'
+          'nav'
+          'main';
+  //grid-gap: 30px; // short hand
   //max-width: ;
 }
 
-.grid-area {
-  //grid-area: ;
-}
-
 .header {
-  display: grid;
-  grid-template-columns: 2fr repeat(3, minmax(100px, 150px));
-  grid-gap: 30px;
-  justify-content: center;
+  grid-area: header;
+  //display: grid;
+  //grid-template-columns: 2fr repeat(3, minmax(100px, 150px));
+  //grid-gap: 30px;
+  //justify-content: center;
 }
 
-.main-nav{
-  display: grid;
-  grid-template-columns:repeat(4, 1fr);
-  grid-template-rows: 150px;
-  grid-gap: 30px;
+.nav {
+  grid-area: nav;
+  //display: grid;
+  //grid-template-columns:repeat(4, 1fr);
+  //grid-template-rows: 150px;
+  //grid-gap: 30px;
 }
 
-.bell-notifications {
-  padding: 30px;
+.main {
+  grid-area: main;
 }
 
-.social-stats{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
-  grid-auto-rows: 1fr;
-  grid-auto-flow: column;
-  grid-gap: 40px;
+//
+//.bell-notifications {
+//  padding: 30px;
+//}
+//
+//.social-stats {
+//  display: grid;
+//  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+//  grid-auto-rows: 1fr;
+//  grid-auto-flow: column;
+//  grid-gap: 40px;
+//}
+//
+//.social-container {
+//  display: flex;
+//}
+
+// ============
+//  Media queries
+// ============
+
+//(320px) mobile
+@media (min-width: 768px) {
+  .grid-container {
+    grid-template-columns: 55px 1fr;
+    grid-template-areas:
+            "header header"
+            'nav main';
+  }
 }
 
-.social-container{
-  display: flex;
-}
+//(768px) tablet
+
+
+//(1024px) desktop
