--- a/css/app.css
+++ b/css/app.css
@@ -371,12 +371,47 @@ a {
 
 .main {
   grid-area: main;
+  display: grid;
+}
+
+.widget-container-full,
+.widget-container-half {
+  width: 95vw;
 }
 
 @media (min-width: 768px) {
   .grid-container {
     grid-template-columns: 55px 1fr;
     grid-template-areas: "header header" "nav main";
+  }
+
+  .main {
+    grid-template-columns: 50%;
+  }
+
+  .traffic,
+.social-stats {
+    grid-column: 1/span 2;
+  }
+
+  .daily,
+.mobile,
+.recent-activity {
+    grid-column: 1/span 1;
+  }
+
+  .mobile,
+.recent-activity,
+.settings-container {
+    grid-column: 2/span 1;
+  }
+
+  .widget-container-full {
+    width: 90vw;
+  }
+
+  .widget-container-half {
+    width: 45vw;
   }
 }
 
