refractor scss files

--- a/scss/2-base/_0-index.scss
+++ b/scss/2-base/_0-index.scss
@@ -6,7 +6,7 @@
 //  =========
 //  reset
 //  =========
-@import "2-reset";
+@import "2-normalize";
 
 //  ==========
 //  typography
@@ -16,4 +16,4 @@
 //  =========
 //  links
 //  =========
-@import "5-links";
+@import "4-links";
