--- a/scss/2-base/_1-global.scss
+++ b/scss/2-base/_1-global.scss
@@ -19,5 +19,14 @@ p {
 
 a {
   text-decoration: none;
+  color:$primary-color-dark;
 }
 
+ul {
+  list-style: none;
+}
+
+h3 {
+  margin-left: 15px;
+  margin-right: 15px;
+}
