--- a/css/app.css
+++ b/css/app.css
@@ -13,6 +13,16 @@ p {
 
 a {
   text-decoration: none;
+  color: #4d4c72;
+}
+
+ul {
+  list-style: none;
+}
+
+h3 {
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -354,35 +364,73 @@ template {
   display: none;
 }
 
-.bell-notifications {
-  margin: 30px 15px;
+.nav {
+  grid-area: nav;
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  background-color: #4d4c72;
+}
+
+.nav-link {
+  margin: 10px 0 5px;
+  align-content: center;
+  width: 40px;
+}
+
+@media (min-width: 768px) {
+  .nav {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: center;
+    gap: 5px;
+  }
+  .nav .nav-link {
+    margin: 5px auto;
+    padding: 5px;
+  }
+}
+.header {
+  grid-area: header;
+  padding: 15px 10px;
+  justify-content: space-between;
+  background-color: #7477bf;
+  color: white;
 }
 
 .tittle {
-  margin: auto;
-  align-content: start;
+  margin: auto auto auto 10px;
+}
+
+.student-img,
+.bell-notifications {
+  margin: auto 5px auto 5px;
+}
+
+.student-img {
+  width: 70px;
+  border-radius: 50%;
+}
+
+.bell-notifications {
+  padding-right: 10px;
+  border-right: 1px solid #4d4c72;
+}
+
+.bell {
+  width: 40px;
+}
+
+.grid-container,
+.main,
+.social-stats {
+  display: grid;
 }
 
 .grid-container {
-  display: grid;
   grid-template-columns: 100%;
   grid-template-rows: auto;
   grid-template-areas: "header" "nav" "main";
-  grid-gap: 30px;
-}
-
-.header {
-  grid-area: header;
-  display: flex;
-}
-
-.nav {
-  grid-area: nav;
-}
-
-.main {
-  grid-area: main;
-  display: grid;
 }
 
 .widget-container-full,
@@ -390,14 +438,69 @@ template {
   width: 95vw;
 }
 
+.main {
+  grid-area: main;
+}
+
+.social-stats {
+  grid-template-columns: 1fr;
+  grid-auto-rows: 100px;
+  grid-gap: 40px;
+}
+
+.main-header,
+.header,
+.traffic-nav,
+.header,
+.alert,
+.social-container {
+  display: flex;
+}
+
+.alert {
+  justify-content: space-between;
+  margin: 15px;
+  border-radius: 5px;
+  background-color: #7477bf;
+  color: white;
+}
+.alert:nth-child(n) {
+  padding: 0 15px;
+}
+
+.alert-close {
+  border: none;
+  background-color: transparent;
+  color: white;
+}
+.alert-close:hover {
+  color: #4d4c72;
+  cursor: pointer;
+}
+
+.headline {
+  margin: 20px;
+}
+
+.tab {
+  border-bottom: 1px solid #4d4c72;
+  border-left: 1px solid #4d4c72;
+  width: 100%;
+}
+
 @media (min-width: 768px) {
   .grid-container {
-    grid-template-columns: 55px 1fr;
+    grid-template-columns: 50px 1fr;
     grid-template-areas: "header header" "nav main";
   }
 
   .main {
     grid-template-columns: 50%;
+  }
+
+  .main-header,
+.alert {
+    grid-column: 1/span 2;
   }
 
   .traffic,
@@ -406,8 +509,8 @@ template {
   }
 
   .daily,
-.mobile,
-.recent-activity {
+.members,
+.message {
     grid-column: 1/span 1;
   }
 
@@ -423,6 +526,40 @@ template {
 
   .widget-container-half {
     width: 45vw;
+  }
+
+  .widget-container-half,
+.widget-container-full {
+    padding-left: 15px;
+  }
+}
+.traffic,
+.daily,
+.mobile {
+  padding-bottom: 15px;
+  border-bottom: 1px solid #4d4c72;
+}
+
+.traffic-nav {
+  margin-right: 30px;
+  padding: 0;
+  justify-content: space-around;
+}
+
+@media (min-width: 768px) {
+  .mobile {
+    border-bottom: 1px solid #4d4c72;
+    border-left: 1px solid #4d4c72;
+  }
+
+  .traffic-nav-link {
+    margin: auto 10px;
+  }
+
+  .traffic-header {
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
   }
 }
 
