--- a/scss/3-layout/_3-mainContent.scss
+++ b/scss/3-layout/_3-mainContent.scss
@@ -1,72 +1,91 @@
-// ============
 //  Grid layout
-// ============
-
-//(320px) mobile
-.grid-container {
+//  ============
+.grid-container,
+.main,
+.social-stats {
   display: grid;
+}
+
+.grid-container {
   grid-template-columns:100%;
   grid-template-rows: auto;
   grid-template-areas:
           'header'
           'nav'
           'main';
-  grid-gap: 30px; // short hand
-  //max-width: ;
-}
-
-.header {
-  grid-area: header;
-  display: flex;
-  //display: grid;
-  //grid-template-columns: 2fr repeat(3, minmax(100px, 150px));
-  //grid-gap: 30px;
-  //justify-content: center;
-}
-
-.nav {
-  grid-area: nav;
-  //display: grid;
-  //grid-template-columns:repeat(4, 1fr);
-  //grid-template-rows: 150px;
-  //grid-gap: 30px;
-}
-
-.main {
-  grid-area: main;
-  display: grid;
 }
 
 .widget-container-full,
 .widget-container-half {
   width: 95vw;
 }
+.main {
+  grid-area: main;
+}
 
-//
-//.bell-notifications {
-//  padding: 30px;
-//}
-//
-//.social-stats {
-//  display: grid;
-//  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
-//  grid-auto-rows: 1fr;
-//  grid-auto-flow: column;
-//  grid-gap: 40px;
-//}
-//
-//.social-container {
-//  display: flex;
-//}
+.social-stats {
+  grid-template-columns: 1fr;
+  grid-auto-rows: 100px;
+  grid-gap: 40px;
+}
 
-// ============
+
+
+//  Flexbox layout
+//  ==============
+.main-header,
+.header,
+.traffic-nav,
+.header,
+.alert,
+.social-container {
+  display: flex;
+}
+
+
+.alert {
+  justify-content: space-between;
+  margin: 15px;
+  border-radius: 5px;
+  background-color: $primary-color-light;
+  color: $font-color-light;
+
+  &:nth-child(n) {
+    padding: 0 15px;
+  }
+}
+
+.alert-close {
+  border: none;
+  background-color: transparent;
+  color: $font-color-light;
+
+  &:hover {
+    color: $primary-color-dark;
+    cursor: pointer;
+  }
+}
+
+.headline {
+  margin: 20px;
+}
+
+.tab {
+  @include spacer-margins;
+  width: 100%;
+}
+
+
 //  Media queries
-// ============
+//  =============
+
+// Todo: store values in maps using mixins to create media queries
 
 //(768px) tablet
 @media (min-width: 768px) {
   .grid-container {
-    grid-template-columns: 55px 1fr;
+    grid-template-columns: 50px 1fr;
+    //max-width: 100%;
     grid-template-areas:
             "header header"
             'nav main';
@@ -76,14 +95,19 @@
     grid-template-columns: 50%;
   }
 
+  .main-header,
+  .alert {
+    grid-column: 1 / span 2;
+  }
+
   .traffic,
   .social-stats {
     grid-column: 1 / span 2;
   }
 
   .daily,
-  .mobile,
-  .recent-activity {
+  .members,
+  .message {
     grid-column: 1 / span 1;
   }
 
@@ -101,7 +125,10 @@
     width: 45vw;
   }
 
-
+  .widget-container-half,
+  .widget-container-full {
+    padding-left: 15px;
+  }
 }
 
 
