--- a/scss/3-layout/_2-header.scss
+++ b/scss/3-layout/_2-header.scss
@@ -1,9 +1,10 @@
 
 .header {
+  @extend %flex;
   grid-area: header;
   padding: 15px 10px;
   justify-content: space-between;
-  background-color: $primary-color-light;
+  background-color: $color-prim-light;
   color: $font-color-light;
 }
 
@@ -11,25 +12,22 @@
   @include center-text($margin-l: 10px);
 }
 
-.student-img,
 .bell-notifications {
   @include center-text($margin-r: 5px, $margin-l: 5px)
 }
 
 .student-img {
+  @extend .bell-notifications;
   width: 70px;
   border-radius: 50%;
 }
 
 .bell-notifications {
   padding-right: 10px;
-  border-right: $border-margin;
+  border-right: $border;
 }
 
 .bell {
   width: 40px;
 }
 
-@media (min-width: 768px) {
-
-}
