--- a/css/app.css
+++ b/css/app.css
@@ -1,30 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Montserrat", sans-serif;
-  height: 100vh;
-}
-
-p {
-  line-height: 1.45em;
-}
-
-a {
-  text-decoration: none;
-  color: #4d4c72;
-}
-
-ul {
-  list-style: none;
-}
-
-h3 {
-  margin-left: 15px;
-  margin-right: 15px;
-}
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -364,9 +337,49 @@ template {
   display: none;
 }
 
+.social-stats, .main, .grid-container {
+  display: grid;
+}
+
+.traffic-nav, .alert, .main-header,
+.social-container, .header, .nav {
+  display: flex;
+}
+
+.widget-container-half, .widget-container-full {
+  width: 95vw;
+  padding-left: 15px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+  height: 100vh;
+}
+
+p {
+  line-height: 1.45em;
+}
+
+a {
+  text-decoration: none;
+  color: #4d4c72;
+}
+
+ul {
+  list-style: none;
+}
+
+h3 {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
 .nav {
   grid-area: nav;
-  display: flex;
   gap: 20px;
   justify-content: center;
   background-color: #4d4c72;
@@ -382,10 +395,10 @@ template {
   .nav {
     flex-direction: column;
     justify-content: flex-start;
-    align-content: center;
     gap: 5px;
   }
-  .nav .nav-link {
+
+  .nav-link {
     margin: 5px auto;
     padding: 5px;
   }
@@ -395,15 +408,14 @@ template {
   padding: 15px 10px;
   justify-content: space-between;
   background-color: #7477bf;
-  color: white;
+  color: #ffffff;
 }
 
 .tittle {
   margin: auto auto auto 10px;
 }
 
-.student-img,
-.bell-notifications {
+.bell-notifications, .student-img {
   margin: auto 5px auto 5px;
 }
 
@@ -412,19 +424,13 @@ template {
   border-radius: 50%;
 }
 
-.bell-notifications {
+.bell-notifications, .student-img {
   padding-right: 10px;
-  border-right: 1px solid #4d4c72;
+  border-right: 1px solid #c9c9db;
 }
 
 .bell {
   width: 40px;
-}
-
-.grid-container,
-.main,
-.social-stats {
-  display: grid;
 }
 
 .grid-container {
@@ -432,14 +438,57 @@ template {
   grid-template-rows: auto;
   grid-template-areas: "header" "nav" "main";
 }
+@media (min-width: 768px) {
+  .grid-container {
+    grid-template-columns: 50px 1fr;
+    grid-template-areas: "header header" "nav main";
+  }
+}
 
-.widget-container-full,
-.widget-container-half {
-  width: 95vw;
+@media (min-width: 768px) {
+  .main-header,
+.alert,
+.traffic,
+.social-stats {
+    grid-column: 1/span 2;
+  }
+}
+
+@media (min-width: 768px) {
+  .daily,
+.members,
+.message {
+    grid-column: 1/span 1;
+  }
+}
+
+@media (min-width: 768px) {
+  .mobile,
+.recent-activity,
+.settings-container {
+    grid-column: 2/span 1;
+  }
+}
+
+@media (min-width: 768px) {
+  .widget-container-full {
+    width: 90vw;
+  }
+}
+
+@media (min-width: 768px) {
+  .widget-container-half {
+    width: 45vw;
+  }
 }
 
 .main {
   grid-area: main;
+}
+@media (min-width: 768px) {
+  .main {
+    grid-template-columns: 50%;
+  }
 }
 
 .social-stats {
@@ -448,13 +497,14 @@ template {
   grid-gap: 40px;
 }
 
-.main-header,
-.header,
-.traffic-nav,
-.header,
-.alert,
-.social-container {
-  display: flex;
+.headline {
+  margin: 20px;
+}
+
+.tab {
+  border-bottom: 1px solid #c9c9db;
+  border-left: 1px solid #c9c9db;
+  width: 100%;
 }
 
 .alert {
@@ -462,82 +512,25 @@ template {
   margin: 15px;
   border-radius: 5px;
   background-color: #7477bf;
-  color: white;
 }
-.alert:nth-child(n) {
+.alert-message, .alert-close {
   padding: 0 15px;
+  color: #ffffff;
 }
-
 .alert-close {
   border: none;
   background-color: transparent;
-  color: white;
 }
 .alert-close:hover {
   color: #4d4c72;
   cursor: pointer;
 }
 
-.headline {
-  margin: 20px;
-}
-
-.tab {
-  border-bottom: 1px solid #4d4c72;
-  border-left: 1px solid #4d4c72;
-  width: 100%;
-}
-
-@media (min-width: 768px) {
-  .grid-container {
-    grid-template-columns: 50px 1fr;
-    grid-template-areas: "header header" "nav main";
-  }
-
-  .main {
-    grid-template-columns: 50%;
-  }
-
-  .main-header,
-.alert {
-    grid-column: 1/span 2;
-  }
-
-  .traffic,
-.social-stats {
-    grid-column: 1/span 2;
-  }
-
-  .daily,
-.members,
-.message {
-    grid-column: 1/span 1;
-  }
-
-  .mobile,
-.recent-activity,
-.settings-container {
-    grid-column: 2/span 1;
-  }
-
-  .widget-container-full {
-    width: 90vw;
-  }
-
-  .widget-container-half {
-    width: 45vw;
-  }
-
-  .widget-container-half,
-.widget-container-full {
-    padding-left: 15px;
-  }
-}
 .traffic,
 .daily,
 .mobile {
   padding-bottom: 15px;
-  border-bottom: 1px solid #4d4c72;
+  border-bottom: 1px solid #c9c9db;
 }
 
 .traffic-nav {
@@ -548,8 +541,8 @@ template {
 
 @media (min-width: 768px) {
   .mobile {
-    border-bottom: 1px solid #4d4c72;
-    border-left: 1px solid #4d4c72;
+    border-bottom: 1px solid #c9c9db;
+    border-left: 1px solid #c9c9db;
   }
 
   .traffic-nav-link {
