--- a/scss/1-helpers/_1-variables.scss
+++ b/scss/1-helpers/_1-variables.scss
@@ -1,17 +1,19 @@
 //  ===============
 //  Color Variables
 //  ===============
-$primary-color-light: rgb(116, 119, 191);
-$primary-color-dark: rgb(77, 76, 114);
-$font-color-light: white;
+$color-prim-light: rgb(116, 119, 191);
+$color-prim-dark: rgb(77, 76, 114);
+//$secondary-color: rgb(216, 219, 222);
+$color-sec: lighten($color-prim-dark, 45%);
+$font-color-light: #ffffff;
 
 //  ============
 //  Breakpoints
 //  ============
 $breakpoints: (
-        'mobile' 320px,
-        'tablet' 768px,
-        'desktop' 1024px,
+        'mobile'  : 320px,
+        'tablet'  : 768px,
+        'desktop' : 1024px,
 );
 
 //  ======
@@ -22,4 +24,4 @@ $breakpoints: (
 //  ======
 //  Others
 //  ======
-$border-margin: 1px solid $primary-color-dark;
+$border: 1px solid $color-sec;
