--- a/scss/3-layout/_3-mainContent.scss
+++ b/scss/3-layout/_3-mainContent.scss
@@ -1,135 +1,117 @@
+//  ============
 //  Grid layout
 //  ============
-.grid-container,
-.main,
-.social-stats {
-  display: grid;
-}
-
 .grid-container {
+  @extend %grid;
   grid-template-columns:100%;
   grid-template-rows: auto;
   grid-template-areas:
           'header'
           'nav'
           'main';
-}
-
-.widget-container-full,
-.widget-container-half {
-  width: 95vw;
-}
-.main {
-  grid-area: main;
-}
-
-.social-stats {
-  grid-template-columns: 1fr;
-  grid-auto-rows: 100px;
-  grid-gap: 40px;
-}
-
-
-
-//  Flexbox layout
-//  ==============
-.main-header,
-.header,
-.traffic-nav,
-.header,
-.alert,
-.social-container {
-  display: flex;
-}
-
-
-.alert {
-  justify-content: space-between;
-  margin: 15px;
-  border-radius: 5px;
-  background-color: $primary-color-light;
-  color: $font-color-light;
-
-  &:nth-child(n) {
-    padding: 0 15px;
-  }
-}
-
-.alert-close {
-  border: none;
-  background-color: transparent;
-  color: $font-color-light;
-
-  &:hover {
-    color: $primary-color-dark;
-    cursor: pointer;
-  }
-}
-
-.headline {
-  margin: 20px;
-}
-
-.tab {
-  @include spacer-margins;
-  width: 100%;
-}
-
-
-//  Media queries
-//  =============
-
-// Todo: store values in maps using mixins to create media queries
-
-//(768px) tablet
-@media (min-width: 768px) {
-  .grid-container {
+  @include m-q('tablet') {
     grid-template-columns: 50px 1fr;
     //max-width: 100%;
     grid-template-areas:
             "header header"
             'nav main';
   }
+}
 
-  .main {
-    grid-template-columns: 50%;
-  }
-
-  .main-header,
-  .alert {
+.main-header,
+.alert,
+.traffic,
+.social-stats {
+  @include m-q('tablet') {
     grid-column: 1 / span 2;
-  }
-
-  .traffic,
-  .social-stats {
-    grid-column: 1 / span 2;
-  }
-
-  .daily,
-  .members,
-  .message {
-    grid-column: 1 / span 1;
-  }
-
-  .mobile,
-  .recent-activity,
-  .settings-container {
-    grid-column: 2 / span 1;
-  }
-
-  .widget-container-full {
-    width: 90vw;
-  }
-
-  .widget-container-half {
-    width: 45vw;
-  }
-
-  .widget-container-half,
-  .widget-container-full {
-    padding-left: 15px;
   }
 }
 
+.daily,
+.members,
+.message {
+  @include m-q('tablet') {
+    grid-column: 1 / span 1;
+  }
+}
 
-//(1024px) desktop
+.mobile,
+.recent-activity,
+.settings-container {
+  @include m-q('tablet') {
+    grid-column: 2 / span 1;
+  }
+}
+
+.widget-container-full {
+  @extend %widget;
+  @include m-q('tablet') {
+    width: 90vw;
+  }
+}
+
+.widget-container-half {
+  @extend %widget;
+  @include m-q('tablet') {
+    width: 45vw;
+  }
+}
+
+.main {
+  @extend %grid;
+  grid-area: main;
+  @include m-q('tablet') {
+    grid-template-columns: 50%;
+  }
+}
+
+.social-stats {
+  @extend %grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: 100px;
+  grid-gap: 40px;
+}
+
+//  ==============
+//  Flexbox layout
+//  ==============
+.main-header,
+.social-container {
+  @extend %flex
+}
+
+//  ==============
+//  Main content
+//  ==============
+.headline {
+  margin: 20px;
+}
+
+.tab {
+  @include divider;
+  width: 100%;
+}
+
+.alert {
+  @extend %flex;
+  justify-content: space-between;
+  margin: 15px;
+  border-radius: 5px;
+  background-color: $color-prim-light;
+
+  &-message {
+    padding: 0 15px;
+    color: $font-color-light;
+  }
+
+  &-close {
+    @extend .alert-message;
+    border: none;
+    background-color: transparent;
+
+    &:hover {
+      color: $color-prim-dark;
+      cursor: pointer;
+    }
+  }
+}
