--- a/scss/4-modules/_0-index.scss
+++ b/scss/4-modules/_0-index.scss
@@ -10,5 +10,26 @@
 //  ==========
 @import "1-charts";
 
+//  ====================
+//  Social stats Section
+//  ====================
+@import "2-stats";
 
-// etc...
+//  ====================
+//  New Members Section
+//  ====================
+@import "3-members";
+//  =======================
+//  Recent Activity Section
+//  =======================
+@import "4-recent-activity";
+
+//  =======================
+//  Message User Section
+//  =======================
+@import "5-message";
+
+//  =======================
+//  Settings Section
+//  =======================
+@import "6-settings";
