--- a/css/app.css
+++ b/css/app.css
@@ -337,12 +337,11 @@ template {
   display: none;
 }
 
-.social-stats, .main, .grid-container {
+.social-flex, .main, .grid-container {
   display: grid;
 }
 
-.traffic-nav, .alert,
-.social-container, .main-header, .header, .nav {
+.social-container, .traffic-nav, .alert, .main-header, .header, .nav {
   display: flex;
 }
 
@@ -357,7 +356,7 @@ template {
 }
 
 @media (min-width: 768px) {
-  .social-stats, .traffic, .alert, .main-header {
+  .social, .traffic, .alert, .main-header {
     grid-column: 1/span 2;
   }
 }
@@ -440,7 +439,7 @@ h3 {
 }
 
 .bell-notifications {
-  margin: auto 5px auto 5px;
+  margin: 5px 5px auto auto;
   padding-right: 10px;
   border-right: 1px solid #c9c9db;
 }
@@ -501,9 +500,10 @@ h3 {
 }
 
 .alert {
+  border: 1px;
+  border-radius: 5px;
   justify-content: space-between;
   margin: 15px;
-  border-radius: 5px;
   background-color: #7477bf;
 }
 .alert-message, .alert-close {
@@ -554,10 +554,22 @@ h3 {
   color: #ffffff;
 }
 
-.social-stats {
-  grid-template-columns: 1fr;
-  grid-auto-rows: 200px;
-  grid-gap: 40px;
+.social-flex {
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+.social-container {
+  border: 1px solid #c9c9db;
+  border-radius: 5px;
+  margin-left: 10px;
+  padding: 5px 10px;
+}
+.social-img {
+  margin: auto 0 auto 5px;
+  width: 75px;
+}
+.social-text {
+  margin: auto auto auto 10px;
 }
 
 /*# sourceMappingURL=app.css.map */
