--- a/scss/3-layout/_3-mainContent.scss
+++ b/scss/3-layout/_3-mainContent.scss
@@ -50,26 +50,18 @@
   }
 }
 
-.main {
+
+
+//  ==============
+//  Main content
+//  ==============
+  .main {
   @extend %grid;
   grid-area: main;
   @include m-q('tablet') {
     grid-template-columns: 50%;
   }
 }
-
-
-//  ==============
-//  Flexbox layout
-//  ==============
-.main-header,
-.social-container {
-  @extend %flex
-}
-
-//  ==============
-//  Main content
-//  ==============
 .headline {
   margin: 20px;
 }
@@ -80,11 +72,11 @@
 }
 
 .alert {
+  @include border($br-style: null, $br-color: null);
   @extend %flex;
   @extend %grid-col-1-2;
   justify-content: space-between;
   margin: 15px;
-  border-radius: 5px;
   background-color: $color-prim-light;
 
 
