--- a/scss/4-modules/_2-stats.scss
+++ b/scss/4-modules/_2-stats.scss
@@ -1,7 +1,27 @@
-.social-stats {
-  @extend %grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: 200px;
-  grid-gap: 40px;
+.social {
   @extend %grid-col-1-2;
+
+  &-flex {
+    @extend %grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+  }
+
+  &-container {
+    @include border();
+    //@include margin();
+    @extend %flex;
+    margin-left: 10px;
+    padding: 5px 10px;
+  }
+
+  &-img {
+    @include margin($left: 5px, $right: 0);
+    width: 75px;
+  }
+
+  &-text {
+    @include margin($left: 10px)
+  }
+
 }
