--- a/scss/4-modules/_0-index.scss
+++ b/scss/4-modules/_0-index.scss
@@ -13,7 +13,7 @@
 //  ====================
 //  Social stats Section
 //  ====================
-@import "2-stats";
+@import "2-social-stats";
 
 //  ====================
 //  New Members Section
