--- a/css/app.css
+++ b/css/app.css
@@ -337,11 +337,11 @@ template {
   display: none;
 }
 
-.social-flex, .main, .grid-container {
+.members, .social-grid, .main, .grid-container {
   display: grid;
 }
 
-.social-container, .traffic-nav, .alert, .main-header, .header, .nav {
+.members-text-wrapper, .social-container, .traffic-nav, .alert, .main-header, .header, .nav {
   display: flex;
 }
 
@@ -356,15 +356,26 @@ template {
 }
 
 @media (min-width: 768px) {
-  .social, .traffic, .alert, .main-header {
-    grid-column: 1/span 2;
+  .daily {
+    grid-column: 1/span 1;
   }
 }
 
 @media (min-width: 768px) {
-  .daily, .members,
-.message {
+  .settings-container, .message, .recent-activity, .members, .social, .traffic, .alert, .main-header {
+    grid-column: 1/span 2;
+  }
+}
+
+@media (min-width: 1024px) {
+  .message, .members {
     grid-column: 1/span 1;
+  }
+}
+
+@media (min-width: 1024px) {
+  .settings-container, .recent-activity {
+    grid-column: 2/span 1;
   }
 }
 
@@ -378,7 +389,7 @@ body {
 }
 
 p {
-  line-height: 1.45em;
+  line-height: 1em;
 }
 
 a {
@@ -388,11 +399,6 @@ a {
 
 ul {
   list-style: none;
-}
-
-h3 {
-  margin-left: 15px;
-  margin-right: 15px;
 }
 
 .nav {
@@ -439,7 +445,7 @@ h3 {
 }
 
 .bell-notifications {
-  margin: 5px 5px auto auto;
+  margin: auto 5px auto 10px;
   padding-right: 10px;
   border-right: 1px solid #c9c9db;
 }
@@ -449,23 +455,20 @@ h3 {
 }
 
 .grid-container {
-  grid-template-columns: 100%;
   grid-template-rows: auto;
   grid-template-areas: "header" "nav" "main";
 }
 @media (min-width: 768px) {
   .grid-container {
     grid-template-columns: 50px 1fr;
+    max-width: 100vw;
     grid-template-areas: "header header" "nav main";
   }
 }
-
-@media (min-width: 768px) {
-  .mobile,
-.recent-activity,
-.settings-container {
-    grid-column: 2/span 1;
-  }
+.grid-container section {
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 15px;
 }
 
 @media (min-width: 768px) {
@@ -554,15 +557,19 @@ h3 {
   color: #ffffff;
 }
 
-.social-flex {
-  grid-template-columns: repeat(3, 1fr);
+.social-grid {
   gap: 10px;
+}
+@media (min-width: 768px) {
+  .social-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 .social-container {
   border: 1px solid #c9c9db;
   border-radius: 5px;
-  margin-left: 10px;
-  padding: 5px 10px;
+  padding: 10px 10px 5px;
+  background-color: #eeeff7;
 }
 .social-img {
   margin: auto 0 auto 5px;
@@ -570,6 +577,43 @@ h3 {
 }
 .social-text {
   margin: auto auto auto 10px;
+}
+.social-text:nth-child(1) {
+  color: #7477bf;
+}
+
+.members-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media (min-width: 768px) {
+  .members-container {
+    flex-direction: row;
+  }
+}
+.members-profile-img {
+  width: 100px;
+  border-radius: 50%;
+}
+.members-text-wrapper {
+  margin: auto auto auto auto;
+  flex-direction: column;
+  align-items: center;
+}
+@media (min-width: 768px) {
+  .members-text-wrapper {
+    margin: auto auto auto 10px;
+    align-content: flex-start;
+  }
+}
+.members-text-wrapper p {
+  margin: 10px auto auto auto;
+}
+@media (min-width: 768px) {
+  .members-text-wrapper p {
+    margin: 10px auto auto 5px;
+  }
 }
 
 /*# sourceMappingURL=app.css.map */
