--- a/scss/3-layout/_3-mainContent.scss
+++ b/scss/3-layout/_3-mainContent.scss
@@ -3,7 +3,6 @@
 //  ============
 .grid-container {
   @extend %grid;
-  grid-template-columns:100%;
   grid-template-rows: auto;
   grid-template-areas:
           'header'
@@ -11,29 +10,22 @@
           'main';
   @include m-q('tablet') {
     grid-template-columns: 50px 1fr;
-    //max-width: 100%;
+    max-width: 100vw;
     grid-template-areas:
             "header header"
             'nav main';
+  }
+
+  & section {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
   }
 }
 
 .main-header {
   @extend %flex;
-  @extend %grid-col-1-2;
-}
-
-.members,
-.message {
-  @extend %grid-col-1-1;
-}
-
-.mobile,
-.recent-activity,
-.settings-container {
-  @include m-q('tablet') {
-    grid-column: 2 / span 1;
-  }
+  @extend %grid-col-tablet-1-2;
 }
 
 .widget-container-full {
@@ -74,7 +66,7 @@
 .alert {
   @include border($br-style: null, $br-color: null);
   @extend %flex;
-  @extend %grid-col-1-2;
+  @extend %grid-col-tablet-1-2;
   justify-content: space-between;
   margin: 15px;
   background-color: $color-prim-light;
