--- a/css/app.css
+++ b/css/app.css
@@ -1,619 +1,1 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-/* Document
-   ========================================================================== */
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-html {
-  line-height: 1.15;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-/**
- * Remove the margin in all browsers.
- */
-body {
-  margin: 0;
-}
-
-/**
- * Render the `main` element consistently in IE.
- */
-main {
-  display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-hr {
-  box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-/**
- * Remove the gray background on active links in IE 10.
- */
-a {
-  background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
-  text-decoration: underline dotted;
-  /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-code,
-kbd,
-samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-/**
- * Remove the border on images inside links in IE 10.
- */
-img {
-  border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-button,
-input {
-  /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-button,
-select {
-  /* 1 */
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-button,
-[type=button],
-[type=reset],
-[type=submit] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-legend {
-  box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-progress {
-  vertical-align: baseline;
-}
-
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-[type=checkbox],
-[type=radio] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-[type=search] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-details {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-summary {
-  display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-/**
- * Add the correct display in IE 10+.
- */
-template {
-  display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-[hidden] {
-  display: none;
-}
-
-.members, .social-grid, .main, .grid-container {
-  display: grid;
-}
-
-.members-text-wrapper, .social-container, .traffic-nav, .alert, .main-header, .header, .nav {
-  display: flex;
-}
-
-.widget-container-half, .widget-container-full {
-  width: 95vw;
-  padding-left: 15px;
-}
-
-.mobile, .daily, .traffic {
-  border-bottom: 1px solid #c9c9db;
-  padding-bottom: 15px;
-}
-
-@media (min-width: 768px) {
-  .daily {
-    grid-column: 1/span 1;
-  }
-}
-
-@media (min-width: 768px) {
-  .settings-container, .message, .recent-activity, .members, .social, .traffic, .alert, .main-header {
-    grid-column: 1/span 2;
-  }
-}
-
-@media (min-width: 1024px) {
-  .message, .members {
-    grid-column: 1/span 1;
-  }
-}
-
-@media (min-width: 1024px) {
-  .settings-container, .recent-activity {
-    grid-column: 2/span 1;
-  }
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Montserrat", sans-serif;
-  height: 100vh;
-}
-
-p {
-  line-height: 1em;
-}
-
-a {
-  text-decoration: none;
-  color: #4d4c72;
-}
-
-ul {
-  list-style: none;
-}
-
-.nav {
-  grid-area: nav;
-  gap: 20px;
-  justify-content: center;
-  background-color: #4d4c72;
-}
-
-.nav-link {
-  margin: 10px 0 5px;
-  align-content: center;
-  width: 40px;
-}
-
-@media (min-width: 768px) {
-  .nav {
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 5px;
-  }
-
-  .nav-link {
-    margin: 5px auto;
-    padding: 5px;
-  }
-}
-.header {
-  grid-area: header;
-  padding: 15px 10px;
-  justify-content: space-between;
-  background-color: #7477bf;
-  color: #ffffff;
-}
-
-.tittle {
-  margin: auto auto auto 10px;
-}
-
-.student-img {
-  margin: auto 5px auto 5px;
-  width: 70px;
-  border-radius: 50%;
-}
-
-.bell-notifications {
-  margin: auto 5px auto 10px;
-  padding-right: 10px;
-  border-right: 1px solid #c9c9db;
-}
-
-.bell {
-  width: 40px;
-}
-
-.grid-container {
-  grid-template-rows: auto;
-  grid-template-areas: "header" "nav" "main";
-}
-@media (min-width: 768px) {
-  .grid-container {
-    grid-template-columns: 50px 1fr;
-    max-width: 100vw;
-    grid-template-areas: "header header" "nav main";
-  }
-}
-.grid-container section {
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 15px;
-}
-
-@media (min-width: 768px) {
-  .widget-container-full {
-    width: 90vw;
-  }
-}
-
-@media (min-width: 768px) {
-  .widget-container-half {
-    width: 45vw;
-  }
-}
-
-.main {
-  grid-area: main;
-}
-@media (min-width: 768px) {
-  .main {
-    grid-template-columns: 50%;
-  }
-}
-
-.headline {
-  margin: 20px;
-}
-
-.tab {
-  border-bottom: 1px solid #c9c9db;
-  border-left: 1px solid #c9c9db;
-  width: 100%;
-}
-
-.alert {
-  border: 1px;
-  border-radius: 5px;
-  justify-content: space-between;
-  margin: 15px;
-  background-color: #7477bf;
-}
-.alert-message, .alert-close {
-  padding: 0 15px;
-  color: #ffffff;
-}
-.alert-close {
-  border: none;
-  background-color: transparent;
-}
-.alert-close:hover {
-  color: #4d4c72;
-  cursor: pointer;
-}
-
-@media (min-width: 768px) {
-  .traffic-header {
-    display: flex;
-    align-content: center;
-    justify-content: space-between;
-  }
-}
-
-@media (min-width: 768px) {
-  .mobile {
-    border-bottom: 1px solid #c9c9db;
-    border-left: 1px solid #c9c9db;
-  }
-}
-
-.traffic-nav {
-  margin-right: 30px;
-  padding: 0;
-  justify-content: space-around;
-}
-.traffic-nav-link {
-  padding: 10px;
-}
-@media (min-width: 768px) {
-  .traffic-nav-link {
-    margin: auto 10px;
-  }
-}
-.traffic-nav-link:hover {
-  border-style: none;
-  border-radius: 25px;
-  background-color: #7dc28b;
-  color: #ffffff;
-}
-
-.social-grid {
-  gap: 10px;
-}
-@media (min-width: 768px) {
-  .social-grid {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-.social-container {
-  border: 1px solid #c9c9db;
-  border-radius: 5px;
-  padding: 10px 10px 5px;
-  background-color: #eeeff7;
-}
-.social-img {
-  margin: auto 0 auto 5px;
-  width: 75px;
-}
-.social-text {
-  margin: auto auto auto 10px;
-}
-.social-text:nth-child(1) {
-  color: #7477bf;
-}
-
-.members-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-@media (min-width: 768px) {
-  .members-container {
-    flex-direction: row;
-  }
-}
-.members-profile-img {
-  width: 100px;
-  border-radius: 50%;
-}
-.members-text-wrapper {
-  margin: auto auto auto auto;
-  flex-direction: column;
-  align-items: center;
-}
-@media (min-width: 768px) {
-  .members-text-wrapper {
-    margin: auto auto auto 10px;
-    align-content: flex-start;
-  }
-}
-.members-text-wrapper p {
-  margin: 10px auto auto auto;
-}
-@media (min-width: 768px) {
-  .members-text-wrapper p {
-    margin: 10px auto auto 5px;
-  }
-}
-
-/*# sourceMappingURL=app.css.map */
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-0.25em}sup{top:-0.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}.mobile,.daily,.traffic{border-bottom:1px solid #c9c9db;padding-bottom:15px}@media(min-width: 768px){.daily{grid-column:1/span 1}}@media(min-width: 768px){.settings-container,.message,.recent-activity,.members,.social,.traffic,.alert,.main-header{grid-column:1/span 2}}.members,.social-grid,.main,.grid-container{display:grid}.members-text-wrapper,.members-container,.social-container,.traffic-nav,.alert,.main-header,.header,.nav{display:flex}@media(min-width: 1024px){.message,.members{grid-column:1/span 1}}@media(min-width: 1024px){.settings-container,.recent-activity{grid-column:2/span 1}}*{box-sizing:border-box}body{font-family:"Montserrat",sans-serif;height:100vh}p{line-height:1em}a{text-decoration:none;color:#7477bf}a:hover{color:#4d4c72}ul{list-style:none}h3{padding-left:10px}.nav{grid-area:nav;gap:20px;justify-content:center;background-color:#4d4c72}.nav-link{margin:10px 0 5px;align-content:center;width:40px}@media(min-width: 768px){.nav{flex-direction:column;justify-content:flex-start;gap:5px}.nav-link{margin:5px auto;padding:5px}}.header{padding:15px 10px 15px 10px;grid-area:header;justify-content:space-between;background-color:#7477bf;color:#fff}.tittle{margin:auto auto auto 0}.student-img{margin:auto 5px auto 5px;width:70px;border-radius:50%}.bell-notifications{margin:auto 5px auto 10px;padding-right:10px;border-right:1px solid #c9c9db}.bell{width:40px}.grid-container{grid-template-rows:auto;grid-template-areas:"header" "nav" "main"}@media(min-width: 768px){.grid-container{grid-template-columns:50px 1fr;grid-template-areas:"header header" "nav main"}}@media(min-width: 768px){.widget-container-full{width:90vw}}@media(min-width: 768px){.widget-container-half{width:45vw}}.main{grid-area:main}@media(min-width: 768px){.main{grid-template-columns:50%}}.headline{margin:20px}.tab{border-bottom:1px solid #c9c9db;border-left:1px solid #c9c9db;width:100%}.alert{border:1px;border-radius:5px;justify-content:space-between;align-items:center;margin:15px;padding:0 15px;background-color:#7477bf}.alert-message{color:#fff}.alert-close{color:#fff;display:contents}.alert-close:hover{color:#4d4c72;cursor:pointer}.div:last-child{display:none}@media(min-width: 768px){.traffic-header{display:flex;align-content:center;justify-content:space-between}}.traffic-nav{margin-right:30px;padding:0;justify-content:space-around}.traffic-nav-link{padding:10px}@media(min-width: 768px){.traffic-nav-link{margin:auto 10px}}.traffic-nav-link:hover{border-style:none;border-radius:25px;background-color:#7dc28b;color:#fff}@media(min-width: 768px){.mobile{border-bottom:1px solid #c9c9db;border-left:1px solid #c9c9db}}.social{padding:0 10px 15px 10px;border-bottom:1px solid #c9c9db}.social h3{padding:0}.social-grid{gap:10px}@media(min-width: 768px){.social-grid{grid-template-columns:repeat(3, 1fr)}}.social-container{border:1px solid #c9c9db;border-radius:5px;padding:10px 10px 10px 10px;background-color:#eeeff7}.social-img{margin:auto 0 auto 5px;width:75px}.social-text{margin:auto auto auto 10px}.social-text:nth-child(1){color:#7477bf}.members{border-bottom:1px solid #c9c9db}.members-container{padding:10px 10px 10px 10px;flex-direction:column;align-items:center}@media(min-width: 768px){.members-container{flex-direction:row}}.members-profile-img{width:100px;border-radius:50%}.members-text-wrapper{margin:auto auto auto auto;flex-direction:column;align-items:center}@media(min-width: 768px){.members-text-wrapper{margin:auto auto auto 10px;align-content:flex-start}}.members-text-wrapper p{margin:10px auto auto auto}@media(min-width: 768px){.members-text-wrapper p{margin:10px auto auto 5px}}.div{border-bottom:1px solid #c9c9db;margin:0 15px}.recent-activity{border-bottom:1px solid #c9c9db}@media(min-width: 1024px){.recent-activity{border-bottom:1px solid #c9c9db;border-left:1px solid #c9c9db}}.recent-activity-arrow{display:none}@media(min-width: 768px){.recent-activity-arrow{display:contents}}/*# sourceMappingURL=app.css.map */
