--- a/scss/2-base/_1-global.scss
+++ b/scss/2-base/_1-global.scss
@@ -19,9 +19,17 @@ p {
 
 a {
   text-decoration: none;
-  color: $color-prim-dark;
+  color: $color-prim-light;
+
+  &:hover {
+    color: $color-prim-dark;
+  }
 }
 
 ul {
   list-style: none;
+}
+
+h3 {
+  padding-left: 10px;
 }
