--- a/scss/3-layout/_3-mainContent.scss
+++ b/scss/3-layout/_3-mainContent.scss
@@ -81,6 +81,12 @@
   }
 }
 
-.div:last-child {
-  display: none;
+//  Todo: add padding-top: 15px to class .div
+.div {
+  @include divider($left: null);
+  margin: 0 15px;
+
+  &:last-child {
+    display: none;
+  }
 }
