--- a/scss/2-base/_1-global.scss
+++ b/scss/2-base/_1-global.scss
@@ -33,3 +33,23 @@ ul {
 h3 {
   padding-left: 10px;
 }
+
+form {
+  padding: 0 10px;
+  margin: 0;
+}
+fieldset {
+  width: 100%;
+  border: none;
+  margin: 0;
+  padding: 0 ;
+}
+
+textarea {
+  overflow: auto;
+}
+
+select,
+button {
+  cursor: pointer;
+}
