--- a/scss/3-layout/_2-header.scss
+++ b/scss/3-layout/_2-header.scss
@@ -6,6 +6,8 @@
   justify-content: space-between;
   background-color: $color-prim-light;
   color: $font-color-light;
+
+  align-items: center;
 }
 
 .tittle {
