--- a/scss/2-base/_1-global.scss
+++ b/scss/2-base/_1-global.scss
@@ -51,5 +51,22 @@ textarea {
 
 select,
 button {
-  cursor: pointer;
+  @extend %cursor;
+}
+
+#switch{
+  @extend %cursor;
+  -webkit-appearance: none;
+  position: relative;
+  width: 50px;
+  height: 30px;
+  border-radius: 25px;
+  background-color: $color-sec-light;
+  transition: .3s;
+  outline: none;
+
+  &::after {
+    content: '';
+    position: absolute;
+  }
 }
