--- a/scss/3-layout/_3-mainContent.scss
+++ b/scss/3-layout/_3-mainContent.scss
@@ -67,11 +67,11 @@
 
 
   &-message {
-    color: $font-color-light;
+    color: $color-font-light;
   }
 
   &-close {
-    color: $font-color-light;
+    color: $color-font-light;
     display: contents;
 
     &:hover {
