--- a/scss/4-modules/_1-charts.scss
+++ b/scss/4-modules/_1-charts.scss
@@ -33,7 +33,7 @@
       border-style: none;
       border-radius: 25px;
       background-color: #7dc28b;
-      color: $font-color-light;
+      color: $color-font-light;
     }
   }
 }
