--- a/scss/3-layout/_2-header.scss
+++ b/scss/3-layout/_2-header.scss
@@ -5,7 +5,7 @@
   grid-area: header;
   justify-content: space-between;
   background-color: $color-prim-light;
-  color: $font-color-light;
+  color: $color-font-light;
 
   align-items: center;
 }
