--- a/scss/4-modules/_6-settings.scss
+++ b/scss/4-modules/_6-settings.scss
@@ -1,17 +1,32 @@
 .settings-container {
   @extend %grid-col-tablet-1-2;
   @extend %grid-col-desktop-2-1;
+  display: flex;
+  flex-direction: column;
+
+  @include mQ('desktop'){
+    @include divider($bottom: null);
+  }
 
 }
 
 //  Switch
 //  ======
+.switch-container {
+  @extend %grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  padding-left: 10px;
+
+}
+
 .switch {
-  position: relative;
-  width: 90px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+  position: relative;
+  width: 90px;
+  margin: 10px 40px;
 
   &-checkbox {
     position: absolute;
@@ -20,7 +35,7 @@
   }
 
   &-label {
-    @include border($br-w: 2, $br-rad: 50px);
+    @include border($br-w: 2px, $br-rad: 50px);
     @extend %cursor;
     @extend %block;
     overflow: hidden;
@@ -64,7 +79,7 @@
   }
 
   &-switch {
-    @include border($br-w: 2, $br-rad: 50%);
+    @include border($br-w: 2px, $br-rad: 50px);
     @extend %block;
     width: 18px;
     margin: 6px;
@@ -83,4 +98,22 @@
   &-checkbox:checked + &-label &-switch {
     right: 0;
   }
+}
+
+#timezone {
+  @include margin($top:25px, $bottom: 15px);
+  width: 90vw;
+  margin-left: 10px;
+
+  @include mQ('desktop'){
+  width: 45vw;
+  }
+}
+
+.settings-button {
+  @extend %grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin: auto 10px 0;
+
 }
