--- a/scss/3-layout/_3-mainContent.scss
+++ b/scss/3-layout/_3-mainContent.scss
@@ -75,7 +75,8 @@
     display: contents;
 
     &:hover {
-      color: $color-prim-dark;
+      background-color: $color-close-x;
+      color: $color-font-light;
       cursor: pointer;
     }
   }
