--- a/scss/4-modules/_1-charts.scss
+++ b/scss/4-modules/_1-charts.scss
@@ -32,7 +32,7 @@
       @extend %cursor;
       border-style: none;
       border-radius: 25px;
-      background-color: #7dc28b;
+      background-color: $color-light-green;
       color: $color-font-light;
     }
   }
