add svg animations

--- a/scss/4-modules/_0-index.scss
+++ b/scss/4-modules/_0-index.scss
@@ -26,3 +26,8 @@
 //  Settings Section
 //  =======================
 @import "6-settings";
+
+//  ==============
+//  SVG Animations
+//  ==============
+@import "7-svg";
